[package]
name = "classes"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
include_dir = "0.7.3"
num-derive.workspace = true
num-traits.workspace = true
paste.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
