[package]
name = "tilt-game"

edition.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
classes.workspace = true
game-classes.workspace = true
maps.workspace = true

clap = { version = "4.4.11", features = ["derive"] }
config.workspace = true
console.workspace = true
directories = "5.0.1"
once_cell.workspace = true
ron = "0.8.1"
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
